recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:10: error: not found: value ocurrences
  ocurrences(l.tail , v)
  ^