recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  var i = 0 
  if (l== Nil){
    return(i)
  }
  if (v == l.head){
    i=i+1
  }
  ocurrences(l.tail , v)
}